--- a/opgv_3_2.html
+++ b/opgv_3_2.html
@@ -369,8 +369,11 @@ summary {
 
 </div>
 
+<div id="TOC">
+true
+</div>
 
-<div id="oppgave-3.2" class="section level2">
+<div id="oppgave-3.2" class="section level2 tabset">
 <h2>Oppgave 3.2</h2>
 <div id="a" class="section level3">
 <h3>3.2.a:</h3>
