--- a/opgv_kap_3.html
+++ b/opgv_kap_3.html
@@ -371,12 +371,12 @@ summary {
 
 <div id="oppgave-3.1" class="section level2 tabset">
 <h2>Oppgave 3.1</h2>
-<p><strong>Viktige å få med seg fra denne oppgaven</strong><br />
+<p><br> <strong>Viktige å få med seg fra denne oppgaven:</strong><br />
 Forstå hva som gjør sannsynlighetsfordelingen diskret og hva det innebærer. Kort fortalt:</p>
 <ul>
 <li><p>Når en sannsynlighetsfordeling er diskret eksisterer det ingen mellomverdier mellom sannsynlighetene.</p></li>
 <li><p>Vi har dermed at: <span class="math inline">\(X = \{a, b\} \rightarrow P(X&lt;b)= P(X=a)\)</span>.</p></li>
-<li><p>Med andre ord: Det eksisterer ingen kontinuerlige verdier mellom (X=a) og (X=b). Verdien er enten a, eller neste steg; b.</p></li>
+<li><p>Med andre ord: Det eksisterer ingen kontinuerlige verdier mellom (X=a) og (X=b). Verdien er enten a, eller neste steg; b. <br><br></p></li>
 </ul>
 <div id="a" class="section level3">
 <h3>3.1.a:</h3>
